# sitl_gazebo

models/leap_vtol_mk2/: leap_vtol_mk2.sdf  model.config
models/leap_vtol_mk3/: CMakeLists.txt  leap_vtol_mk3.sdf  leap_vtol_mk3.urdf  model.config  package.xml
models/leap_vtol_mk3/config/: joint_names_leap_vtol_mk3.yaml
models/leap_vtol_mk3/launch/: display.launch  gazebo.launch
models/leap_vtol_mk3/meshes/: aileron_left.STL  aileron_right.STL  cruise_motor.STL  elevator.STL  motor_1.STL  motor_2.STL  motor_3.STL  motor_4.STL  motor_5.STL  motor_6.STL  motor_7.STL  motor_8.STL  rudder.STL
models/leap_vtol_mk3/meshes_dae/: aileron_left.dae  aileron_right.dae  cruise_motor.dae  elevator.dae  motor_1.dae  motor_2.dae  motor_3.dae  motor_4.dae  motor_5.dae  motor_6.dae  motor_7.dae  motor_8.dae  rudder.dae
models/leap_vtol_mk3/urdf/: leap_vtol_mk3.csv
worlds/: leap_vtol_mk2.world  leap_vtol_mk3.world
