<package format="2">
  <name>leap_vtol_mk3</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for leap_vtol_mk3</p>
    <p>This package contains configuration data, 3D models and launch files
for leap_vtol_mk3 robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="iyer.suchet@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
